--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="login">Login</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="Register">Register</string>
+    <string name="errorText" />
 
 
 </resources>
