--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="Register">Register</string>
     <string name="errorText" />
+    <string name="title_activity_edit_service_provider_time">editServiceProviderTime</string>
+    <string name="title_activity_edit_service_provider_services">editServiceProviderServices
+    </string>
 
 
 </resources>
